syntax = "proto3";

package com.clickhouse.test.proto;

option java_package = "com.clickhouse.test.proto";
option java_outer_classname = "SimpleProto";

message Simple {
  int32 intField = 1;
  int64 longField = 2;
  float floatField = 3;
  double doubleField = 4;
  bool booleanField = 5;
  string stringField = 6;
}
